--- a/microservice-frontend-master/microservice-frontend-master/index.html
+++ b/microservice-frontend-master/microservice-frontend-master/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="#" onclick="toShoppingCart()" >Shopping Cart <span class="sr-only">(current)</span></a> <!-- My first change ~Isaiah -->
             </li>
             <li class="nav-item active">
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                <input type="email" class="form-control" id="email" placeholder="Enter email"> <!-- My first change ~Jesse -->
             </li>
         </ul>
     </div>
