--- a/microservice-frontend-master/microservice-frontend-master/index.html
+++ b/microservice-frontend-master/microservice-frontend-master/index.html
@@ -40,7 +40,7 @@
                 <!--end of col-->
                 <div class="col" style="padding-right: 10px">
                     <input class="form-control form-control-lg form-control-borderless" type="search"
-                           placeholder="Search title or keywords" id="title">
+                           placeholder="Search for title or keywords" id="title"> <!-- My first change ~Kaitlin -->
                 </div>
                 <!--end of col-->
                 <div class="col-auto">
